--- a/public/index.html
+++ b/public/index.html
@@ -22,16 +22,19 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <!-- <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" /> -->
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LGWSBFMFXP"></script>
+
+
+  <!-- Google Tag Manager  -->
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PTERCR8LF3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-LGWSBFMFXP');
+    gtag('config', 'G-PTERCR8LF3');
   </script>
-
 
 
 
